# mtgcalc

./: mtgcalc.py  pyproject.toml
